--- a/templates/filled_form.html
+++ b/templates/filled_form.html
@@ -1,4 +1,4 @@
-<div class="container mx-auto p-4" id="main">
+<div class="container absolute left-1/2 -translate-x-1/2 translate-y-20" id="main">
     <div class="bg-black bg-opacity-60 rounded-2xl p-4">
         <h1 class="text-2xl font-bold mb-4 text-white">Edit Student</h1>
         <form method="POST">
