Add tax calculation feature

--- a/templates/index.html
+++ b/templates/index.html
@@ -104,6 +104,13 @@
             >
               Update Database
             </button>
+            <button
+              hx-get="/prepare_tax_return"
+              hx-target="#main"
+              class="bg-black hover:bg-gray-400 text-white hover:text-gray-800 rounded-2xl px-6 py-3 w-48 mb-6 border-2 border-white"
+            >
+              Prepare taxes
+            </button>
           </div>
         </div>
       </div>
