--- a/templates/add_student.html
+++ b/templates/add_student.html
@@ -1,41 +1,101 @@
-<div class="container absolute left-1/2 -translate-x-1/2 translate-y-20" id="main">
-    <div class="bg-black bg-opacity-60 rounded-2xl p-4">
-        <h1 class="text-2xl font-bold mb-4 text-white">Add Student</h1>
-        <form method="POST">
-            {{ form.csrf_token }}
-            <div class="mb-4">
-                <label for="name" class="block mb-2 text-white">Name</label>
-                <input type="text" id="name" name="name" class="bg-white text-black rounded-md px-3 py-2 w-full border border-black" required>
-            </div>
-            <div class="mb-4">
-                <label for="surname" class="block mb-2 text-white">Surname</label>
-                <input type="text" id="surname" name="surname" class="bg-white text-black rounded-md px-3 py-2 w-full border border-black" required>
-            </div>
-            <div class="mb-4">
-                <label for="parent" class="block mb-2 text-white">Parent</label>
-                <input type="text" class="bg-white text-black rounded-md px-3 py-2 w-full border border-black" id="parent" name="parent" required>
-            </div>
-            <div class="mb-4">
-                <label for="email" class="block mb-2 text-white">Email</label>
-                <input type="text" id="email" name="email" class="bg-white text-black rounded-md px-3 py-2 w-full border border-black" required>
-            </div>
-            <div class="mb-4">
-                <label for="address" class="block mb-2 text-white">Address</label>
-                <input type="text" id="address" name="address" class="bg-white text-black rounded-md px-3 py-2 w-full border border-black" required>
-            </div>
-            <div class="mb-4">
-                <label for="phone_number" class="block mb-2 text-white">Phone Number</label>
-                <input type="text" id="phone_number" name="phone_number" class="bg-white text-black rounded-md px-3 py-2 w-full border border-black" required>
-            </div>
-            <div class="mb-4">
-                <label for="price_per_hour" class="block mb-2 text-white">Price per Hour</label>
-                <input type="text" id="price_per_hour" name="price_per_hour" class="bg-white text-black rounded-md px-3 py-2 w-full border border-black" required>
-            </div>
-            <div class="flex justify-end">
-                <button hx-get="/" hx-target= "#main" class="bg-red-500 hover:bg-red-700 text-white rounded-md px-4 py-2 mr-4">Cancel</button>
-                <button hx-post="/add-student" hx-target="#main" class="bg-blue-500 hover:bg-blue-700 text-white rounded-md px-4 py-2">Add</button>
-            </div>
-
-        </form>
-    </div>
+<div
+  class="container absolute left-1/2 -translate-x-1/2 translate-y-20"
+  id="main"
+>
+  <div class="bg-black bg-opacity-60 rounded-2xl p-4">
+    <h1 class="text-2xl font-bold mb-4 text-white">Add Student</h1>
+    <form method="POST">
+      {{ form.csrf_token }}
+      <div class="mb-4">
+        <label for="name" class="block mb-2 text-white">Name</label>
+        <input
+          type="text"
+          id="name"
+          name="name"
+          class="bg-white text-black rounded-md px-3 py-2 w-full border border-black"
+          required
+        />
+      </div>
+      <div class="mb-4">
+        <label for="surname" class="block mb-2 text-white">Surname</label>
+        <input
+          type="text"
+          id="surname"
+          name="surname"
+          class="bg-white text-black rounded-md px-3 py-2 w-full border border-black"
+          required
+        />
+      </div>
+      <div class="mb-4">
+        <label for="parent" class="block mb-2 text-white">Parent</label>
+        <input
+          type="text"
+          class="bg-white text-black rounded-md px-3 py-2 w-full border border-black"
+          id="parent"
+          name="parent"
+          required
+        />
+      </div>
+      <div class="mb-4">
+        <label for="email" class="block mb-2 text-white">Email</label>
+        <input
+          type="text"
+          id="email"
+          name="email"
+          class="bg-white text-black rounded-md px-3 py-2 w-full border border-black"
+          required
+        />
+      </div>
+      <div class="mb-4">
+        <label for="address" class="block mb-2 text-white">Address</label>
+        <input
+          type="text"
+          id="address"
+          name="address"
+          class="bg-white text-black rounded-md px-3 py-2 w-full border border-black"
+          required
+        />
+      </div>
+      <div class="mb-4">
+        <label for="phone_number" class="block mb-2 text-white"
+          >Phone Number</label
+        >
+        <input
+          type="text"
+          id="phone_number"
+          name="phone_number"
+          class="bg-white text-black rounded-md px-3 py-2 w-full border border-black"
+          required
+        />
+      </div>
+      <div class="mb-4">
+        <label for="price_per_hour" class="block mb-2 text-white"
+          >Price per Hour</label
+        >
+        <input
+          type="text"
+          id="price_per_hour"
+          name="price_per_hour"
+          class="bg-white text-black rounded-md px-3 py-2 w-full border border-black"
+          required
+        />
+      </div>
+      <div class="flex justify-end">
+        <button
+          hx-get="/"
+          hx-target="#main"
+          class="bg-red-500 hover:bg-red-700 text-white rounded-md px-4 py-2 mr-4"
+        >
+          Cancel
+        </button>
+        <button
+          hx-post="/add-student"
+          hx-target="#main"
+          class="bg-blue-500 hover:bg-blue-700 text-white rounded-md px-4 py-2"
+        >
+          Add
+        </button>
+      </div>
+    </form>
+  </div>
 </div>
