--- a/templates/invoice_inspection.html
+++ b/templates/invoice_inspection.html
@@ -1,13 +1,31 @@
-<div class="container absolute left-1/2 -translate-x-1/2 translate-y-20" id="main">
-    <div class="bg-black bg-opacity-60 rounded-2xl p-4">
-        <h1 class="text-2xl font-bold mb-4 text-white">Invoice Inspection</h1>
-        <iframe src="/pdf?student_id={{student_id}}" width="100%" height="900px" class="p-4"></iframe>
-        <div class="flex justify-end">
-            <button hx-get="/" hx-target="#main"
-                class="bg-red-500 hover:bg-red-700 text-white rounded-md px-4 py-2 mr-4">Cancel</button>
-            <button hx-confirm="Please confirm the invoice is correct before sending"
-                hx-post="/invoice_send?student_id={{student_id}}&hours={{hours}}&total={{total}}" hx-target="#main"
-                class="bg-blue-500 hover:bg-blue-700 text-white rounded-md px-4 py-2">Send</button>
-        </div>
+<div
+  class="container absolute left-1/2 -translate-x-1/2 translate-y-20"
+  id="main"
+>
+  <div class="bg-black bg-opacity-60 rounded-2xl p-4">
+    <h1 class="text-2xl font-bold mb-4 text-white">Invoice Inspection</h1>
+    <iframe
+      src="/pdf?student_id={{student_id}}"
+      width="100%"
+      height="900px"
+      class="p-4"
+    ></iframe>
+    <div class="flex justify-end">
+      <button
+        hx-get="/"
+        hx-target="#main"
+        class="bg-red-500 hover:bg-red-700 text-white rounded-md px-4 py-2 mr-4"
+      >
+        Cancel
+      </button>
+      <button
+        hx-confirm="Please confirm the invoice is correct before sending"
+        hx-post="/invoice_send?student_id={{student_id}}&hours={{hours}}&total={{total}}"
+        hx-target="#main"
+        class="bg-blue-500 hover:bg-blue-700 text-white rounded-md px-4 py-2"
+      >
+        Send
+      </button>
     </div>
+  </div>
 </div>
