--- a/templates/remove_student.html
+++ b/templates/remove_student.html
@@ -1,26 +1,41 @@
-<div class="container absolute left-1/2 -translate-x-1/2 translate-y-20" id="main">
-    <div class="bg-black bg-opacity-60 rounded-2xl p-4">
-        <h1 class="text-2xl font-bold mb-4 text-white">Remove Student</h1>
-        <form method="POST">
-            {{ form.csrf_token }}
-            <div class="mb-4">
-                <label for="student_id" class="block mb-2 text-white">Select Student to be removed</label>
-                <select  id="student_id" name="student_id" class="bg-white text-black rounded-md px-3 py-2 w-full border border-black" required>
-                {% for student_id in form.student_id %}
-                    {{ student_id }}
-                {% endfor %}
-                </select>
-            </div>
-            <div class="flex justify-end">
-                <button hx-get="/" hx-target= "#main" class="bg-red-500 hover:bg-red-700 text-white rounded-md px-4 py-2 mr-4">Cancel</button>
-                <button hx-confirm="Please make sure data will be permanently deleted." hx-post="/remove-student" hx-target = "#main" class="bg-blue-500 hover:bg-blue-700 text-white rounded-md px-4 py-2">Remove</button>
-            </div>
-        </form>
-    </div>
+<div
+  class="container absolute left-1/2 -translate-x-1/2 translate-y-20"
+  id="main"
+>
+  <div class="bg-black bg-opacity-60 rounded-2xl p-4">
+    <h1 class="text-2xl font-bold mb-4 text-white">Remove Student</h1>
+    <form method="POST">
+      {{ form.csrf_token }}
+      <div class="mb-4">
+        <label for="student_id" class="block mb-2 text-white"
+          >Select Student to be removed</label
+        >
+        <select
+          id="student_id"
+          name="student_id"
+          class="bg-white text-black rounded-md px-3 py-2 w-full border border-black"
+          required
+        >
+          {% for student_id in form.student_id %} {{ student_id }} {% endfor %}
+        </select>
+      </div>
+      <div class="flex justify-end">
+        <button
+          hx-get="/"
+          hx-target="#main"
+          class="bg-red-500 hover:bg-red-700 text-white rounded-md px-4 py-2 mr-4"
+        >
+          Cancel
+        </button>
+        <button
+          hx-confirm="Please make sure data will be permanently deleted."
+          hx-post="/remove-student"
+          hx-target="#main"
+          class="bg-blue-500 hover:bg-blue-700 text-white rounded-md px-4 py-2"
+        >
+          Remove
+        </button>
+      </div>
+    </form>
+  </div>
 </div>
-
-
-
-
-
-
